--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ make -j8 binary V= DESTCPU=arm64 ARCH=arm64 DISTTYPE=release
     <tr>
         <td>Version</td>
         <td>Download</td>
+        <td>File Size</td>
         <td>MD5 Checksum</td>
         <td>SHA1 Checksum</td>
     </tr>
@@ -29,22 +30,26 @@ make -j8 binary V= DESTCPU=arm64 ARCH=arm64 DISTTYPE=release
     <tr>
         <td rowspan="2">v14.17.0</td>
         <td><a href="release/v14.17.0/node-v14.17.0-darwin-arm64.tar.gz">node-v14.17.0-darwin-arm64.tar.gz</a></td>
+        <td>29.10 MB</td>
         <td>38611947fc15aff2f1ec68d07f704fca</td>
         <td>e28a09efacd958b3aa8795341309c34f89eb6179</td>
     </tr>
     <tr>
         <td><a href="release/v14.17.0/node-v14.17.0-darwin-arm64.tar.xz">node-v14.17.0-darwin-arm64.tar.xz</a></td>
+        <td>18.02 MB</td>
         <td>ab3ced1c93e20c69b65d4825a05e1c2a</td>
         <td>8ee77b6a0eec0b6ef4c8fc2df2c9abf1d6741cfe</td>
     </tr>
     <tr>
         <td rowspan="2">v14.17.1</td>
         <td><a href="release/v14.17.1/node-v14.17.1-darwin-arm64.tar.gz">node-v14.17.1-darwin-arm64.tar.gz</a></td>
+        <td>29.18 MB</td>
         <td>7b96f7dbb484918cd938a75ccf5b031b</td>
         <td>911e9efe4823b86694a264146dd6829de8c54669</td>
     </tr>
     <tr>
         <td><a href="release/v14.17.1/node-v14.17.1-darwin-arm64.tar.xz">node-v14.17.1-darwin-arm64.tar.xz</a></td>
+        <td>18.08 MB</td>
         <td>42564474d4837784cc1fc7756778e53f</td>
         <td>eebcc11d0bb38b2bef3d705dc5ba0eed3177ef1d</td>
     </tr>
