--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Node.JS 14 Apple Silicon (arm64) Unofficial Build</title>
+    <meta name="description" content="This site provide unofficial apple silicon (arm64) prebuild binary.">
+    <meta name="og:title" content="Node.JS 14 macOS arm build">
+    <meta name="og:description" content="This site provide unofficial apple silicon (arm64) prebuild binary.">
 </head>
 <body>
 <h1>Node.JS 14 Apple Silicon (arm64) Unofficial Build</h1>
@@ -29,7 +32,7 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.1
     </thead>
     <tbody>
     <tr>
-        <td rowspan="2">v14.17.0</td>
+        <td rowspan="3">v14.17.0</td>
         <td><a href="release/v14.17.0/node-v14.17.0-darwin-arm64.tar.gz">node-v14.17.0-darwin-arm64.tar.gz</a></td>
         <td>29.10 MB</td>
         <td>38611947fc15aff2f1ec68d07f704fca</td>
@@ -42,7 +45,13 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.1
         <td>8ee77b6a0eec0b6ef4c8fc2df2c9abf1d6741cfe</td>
     </tr>
     <tr>
-        <td rowspan="2">v14.17.1</td>
+        <td><a href="release/v14.17.0/SHASUMS256.txt">SHASUMS256.txt</a></td>
+        <td>200 B</td>
+        <td>85f4bac925d79fa920f72e068b751dfa</td>
+        <td>a69b5b03d8f60024a3d236f0337d9648ea74baeb</td>
+    </tr>
+    <tr>
+        <td rowspan="3">v14.17.1</td>
         <td><a href="release/v14.17.1/node-v14.17.1-darwin-arm64.tar.gz">node-v14.17.1-darwin-arm64.tar.gz</a></td>
         <td>29.18 MB</td>
         <td>7b96f7dbb484918cd938a75ccf5b031b</td>
@@ -53,6 +62,12 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.1
         <td>18.08 MB</td>
         <td>42564474d4837784cc1fc7756778e53f</td>
         <td>eebcc11d0bb38b2bef3d705dc5ba0eed3177ef1d</td>
+    </tr>
+    <tr>
+        <td><a href="release/v14.17.1/SHASUMS256.txt">SHASUMS256.txt</a></td>
+        <td>200 B</td>
+        <td>029fa6b40ac62fd38bc87a758751c98c</td>
+        <td>8eac4d463083d7e0846fcb2dd7ece2de888bb14f</td>
     </tr>
     </tbody>
 </table>
