--- a/index.html
+++ b/index.html
@@ -69,6 +69,25 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.1
         <td>029fa6b40ac62fd38bc87a758751c98c</td>
         <td>8eac4d463083d7e0846fcb2dd7ece2de888bb14f</td>
     </tr>
+    <tr>
+        <td rowspan="3">v14.17.2</td>
+        <td><a href="release/v14.17.2/node-v14.17.2-darwin-arm64.tar.gz">node-v14.17.2-darwin-arm64.tar.gz</a></td>
+        <td>29.18 MB</td>
+        <td>7bd49501c4221615d063243446f37dd3</td>
+        <td>48c8caadd40ef45f33afc1f441d4892d2580cdcd</td>
+    </tr>
+    <tr>
+        <td><a href="release/v14.17.2/node-v14.17.2-darwin-arm64.tar.xz">node-v14.17.2-darwin-arm64.tar.xz</a></td>
+        <td>18.09 MB</td>
+        <td>9a0c7a9e12c140a4d37e38e88e833098</td>
+        <td>1d89fc0772f7c76dc1664a7b3823f80298cf4c10</td>
+    </tr>
+    <tr>
+        <td><a href="release/v14.17.2/SHASUMS256.txt">SHASUMS256.txt</a></td>
+        <td>200 B</td>
+        <td>78752aad097817d0cc3d78269c950575</td>
+        <td>3cc68ec6779903b5603ba666a2fb32488b73216b</td>
+    </tr>
     </tbody>
 </table>
 
