--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.3
     </tr>
     </thead>
     <tbody>
+    <!-- v14.17.4 -->
+    <tr>
+        <td rowspan="3">v14.17.4</td>
+        <td><a href="release/v14.17.4/node-v14.17.4-darwin-arm64.tar.gz">node-v14.17.4-darwin-arm64.tar.gz</a></td>
+        <td>29.20 MB</td>
+        <td>725b4c8a0abc456ec63ed2a85af32e95</td>
+        <td>6f04db589e614947d68e11fe916a468fa013a452</td>
+    </tr>
+    <tr>
+        <td><a href="release/v14.17.4/node-v14.17.4-darwin-arm64.tar.xz">node-v14.17.4-darwin-arm64.tar.xz</a></td>
+        <td>18.09 MB</td>
+        <td>ae0dc64031424bfa3708be85f3515b27</td>
+        <td>b37a9c3e073e490378c555a1ec76d0f8e89a6570</td>
+    </tr>
+    <tr>
+        <td><a href="release/v14.17.4/SHASUMS256.txt">SHASUMS256.txt</a></td>
+        <td>200 B</td>
+        <td>61c2c85e9a00a39e1e106eeba1791a45</td>
+        <td>aa8d56b3e24035498b78e1e51e9d67de9bc37153</td>
+    </tr>
     <!-- v14.17.3 -->
     <tr>
         <td rowspan="3">v14.17.3</td>
@@ -50,7 +70,7 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.3
         <td>200 B</td>
         <td>53f2aabcde8d53feb817d51f7d0eb4a1</td>
         <td>fe45aca6bafff0e6322648cb3d1da903ee7b0cab</td>
-    </tr>    
+    </tr>
     <!-- v14.17.2 -->
     <tr>
         <td rowspan="3">v14.17.2</td>
