--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.3
     </tr>
     </thead>
     <tbody>
+    <!-- v14.17.5 -->
+    <tr>
+        <td rowspan="3">v14.17.5</td>
+        <td><a href="release/v14.17.5/node-v14.17.5-darwin-arm64.tar.gz">node-v14.17.5-darwin-arm64.tar.gz</a></td>
+        <td>29.20 MB</td>
+        <td>4e7e1b3e16866441ee688476b590badc</td>
+        <td>d93b3fadf831450cc0ab253fcd54332693bf8491</td>
+    </tr>
+    <tr>
+        <td><a href="release/v14.17.5/node-v14.17.5-darwin-arm64.tar.xz">node-v14.17.5-darwin-arm64.tar.xz</a></td>
+        <td>18.09 MB</td>
+        <td>3d0a52e929a06f9a786d4b67924b318b</td>
+        <td>5f1d0fdabb1acfadfdac93e4d1053384229b7506</td>
+    </tr>
+    <tr>
+        <td><a href="release/v14.17.5/SHASUMS256.txt">SHASUMS256.txt</a></td>
+        <td>200 B</td>
+        <td>6f12735e49f459024a25abc628031998</td>
+        <td>df56e413c15c16d83b77595d16b3c6013fa60d96</td>
+    </tr>
     <!-- v14.17.4 -->
     <tr>
         <td rowspan="3">v14.17.4</td>
