--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="text-indigo-600 hover:text-indigo-900 underline" href="https://github.com/nvm-sh/nvm"
                 target="_blank">nvm</a>:</h2>
         <pre class="px-3 py-3 bg-gray-100 rounded">
-NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.5
+NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.6
 </pre>
     </header>
     <article>
@@ -58,6 +58,40 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.5
                 </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
+                <!-- v14.17.6 -->
+                <tr class="bg-white">
+                    <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.17.6</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.17.5/node-v14.17.5-darwin-arm64.tar.gz">node-v14.17.6-darwin-arm64.tar.gz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">29.20 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">0b6f687a8b652c43c2b13563c36dbffe</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        ece983237abf76c996b2c57609410bef7b024dfa
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.17.5/node-v14.17.5-darwin-arm64.tar.xz">node-v14.17.6-darwin-arm64.tar.xz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.09 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">33ab4cb519b044ba309e5da67902fbcd</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        fbab8ebeebf57521db072a23052431f2eb312f1e
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.17.5/SHASUMS256.txt">SHASUMS256.txt</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">dbddea159f1923635d3c49b58bf75a8b</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        66f7088061eea3aa2bbd729bb91993d14d0da3f8
+                    </td>
+                </tr>
                 <!-- v14.17.5 -->
                 <tr class="bg-white">
                     <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.17.5</td>
