--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="text-indigo-600 hover:text-indigo-900 underline" href="https://github.com/nvm-sh/nvm"
                 target="_blank">nvm</a>:</h2>
         <pre class="px-3 py-3 bg-gray-100 rounded">
-NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.6
+NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.18.0
 </pre>
     </header>
     <article>
@@ -58,12 +58,46 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.6
                 </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
+                <!-- v14.18.0 -->
+                <tr class="bg-white">
+                    <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.18.0</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.18.0/node-v14.18.0-darwin-arm64.tar.gz">node-v14.18.0-darwin-arm64.tar.gz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">29.31 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">8aa3c443e19ff59e13569defaa617fb2</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        addf4f4b08fd1fdb33cd5559ee0e8768317b9cbf
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.18.0/node-v14.18.0-darwin-arm64.tar.xz">node-v14.18.0-darwin-arm64.tar.xz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.18 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">aab09d3e3b977d8b2e2f407a71ea490b</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        aa81790ddd19adbee7c46c569b051a83159bcfae
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.18.0/SHASUMS256.txt">SHASUMS256.txt</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">11b305701bdabdbfea434d156366f579</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        9987ba8d09a79ae36764f98c34829b2024c1fda0
+                    </td>
+                </tr>
                 <!-- v14.17.6 -->
                 <tr class="bg-white">
                     <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.17.6</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
                             class="text-blue-500 hover:text-blue-900"
-                            href="release/v14.17.5/node-v14.17.5-darwin-arm64.tar.gz">node-v14.17.6-darwin-arm64.tar.gz</a>
+                            href="release/v14.17.6/node-v14.17.6-darwin-arm64.tar.gz">node-v14.17.6-darwin-arm64.tar.gz</a>
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">29.22 MB</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">0b6f687a8b652c43c2b13563c36dbffe</td>
@@ -74,7 +108,7 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.6
                 <tr>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
                             class="text-blue-500 hover:text-blue-900"
-                            href="release/v14.17.5/node-v14.17.5-darwin-arm64.tar.xz">node-v14.17.6-darwin-arm64.tar.xz</a>
+                            href="release/v14.17.6/node-v14.17.6-darwin-arm64.tar.xz">node-v14.17.6-darwin-arm64.tar.xz</a>
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.11 MB</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">33ab4cb519b044ba309e5da67902fbcd</td>
@@ -84,7 +118,7 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.17.6
                 </tr>
                 <tr>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
-                            class="text-blue-500 hover:text-blue-900" href="release/v14.17.5/SHASUMS256.txt">SHASUMS256.txt</a>
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.17.6/SHASUMS256.txt">SHASUMS256.txt</a>
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">dbddea159f1923635d3c49b58bf75a8b</td>
