--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="text-indigo-600 hover:text-indigo-900 underline" href="https://github.com/nvm-sh/nvm"
                 target="_blank">nvm</a>:</h2>
         <pre class="px-3 py-3 bg-gray-100 rounded">
-NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.18.0
+NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.18.1
 </pre>
     </header>
     <article>
@@ -58,6 +58,40 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.18.0
                 </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
+                <!-- v14.18.1 -->
+                <tr class="bg-white">
+                    <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.18.1</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.18.1/node-v14.18.1-darwin-arm64.tar.gz">node-v14.18.1-darwin-arm64.tar.gz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">29.30 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">ed92cef773ef567e3cde910e5227d86c</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        e6c159596d325ab8692b3334f3ac5c24837c6a00
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.18.1/node-v14.18.1-darwin-arm64.tar.xz">node-v14.18.1-darwin-arm64.tar.xz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.16 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">5b4d7e5c6adfca04729d52d92f613873</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        dc2d7c5e456e28ead16b5f0f96f92ee3719b133c
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.18.1/SHASUMS256.txt">SHASUMS256.txt</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">e52cd1a885a7cf01173db1220e5bb697</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        5f20898c7c9b117b004042ca45b23e728dd3bcf1
+                    </td>
+                </tr>
                 <!-- v14.18.0 -->
                 <tr class="bg-white">
                     <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.18.0</td>
