feat: add v14.18.2 release

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="text-indigo-600 hover:text-indigo-900 underline" href="https://github.com/nvm-sh/nvm"
                 target="_blank">nvm</a>:</h2>
         <pre class="px-3 py-3 bg-gray-100 rounded">
-NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.18.1
+NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.18.2
 </pre>
     </header>
     <article>
@@ -58,6 +58,41 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.18.1
                 </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
+                <!-- ANCHOR -->
+                <!-- v14.18.2 -->
+                <tr class="bg-white">
+                    <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.18.2</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.18.2/node-v14.18.2-darwin-arm64.tar.gz">node-v14.18.2-darwin-arm64.tar.gz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">29.30 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">46923814e86b3c28ca47c45fb1540c09</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        3d5fac122ec996b73558fd677b3485b871f6b531
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.18.2/node-v14.18.2-darwin-arm64.tar.xz">node-v14.18.2-darwin-arm64.tar.xz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.16 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">160338d03a4c3b4f64172308d1c96740</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        89006ec690e9249fdd5e772e2af4468d8090fe51
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.18.2/SHASUMS256.txt">SHASUMS256.txt</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">31ffad02fe3447a15d8ba8b43ce0025b</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        87c27406ecb13893c97d4948875694e1c0c00725
+                    </td>
+                </tr>
                 <!-- v14.18.1 -->
                 <tr class="bg-white">
                     <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.18.1</td>
