--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="text-indigo-600 hover:text-indigo-900 underline" href="https://github.com/nvm-sh/nvm"
                 target="_blank">nvm</a>:</h2>
         <pre class="px-3 py-3 bg-gray-100 rounded">
-NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.19.3
+NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.20.0
 </pre>
     </header>
     <article>
@@ -59,6 +59,40 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.19.3
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                 <!-- ANCHOR -->
+                <!-- v14.20.0 -->
+                <tr class="bg-white">
+                    <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.20.0</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.20.0/node-v14.20.0-darwin-arm64.tar.gz">node-v14.20.0-darwin-arm64.tar.gz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">29.89 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">c0653831b80a76eee2e71c3db8f63faf</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        b9bd9958bdc3de16849af509822cc8c1230a621a
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.20.0/node-v14.20.0-darwin-arm64.tar.xz">node-v14.20.0-darwin-arm64.tar.xz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.53 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">c24dc0611a9b90befc33bf2c06b21ab7</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        d7f01565ab3dcbd435b75d07d75a63bfac632bdf
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.20.0/SHASUMS256.txt">SHASUMS256.txt</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">e3f4838da357526a780b0946b7b4b8c3</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        27024274667cbee60924b56713c6ffd36778aa98
+                    </td>
+                </tr>
                 <!-- v14.19.3 -->
                 <tr class="bg-white">
                     <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.19.3</td>
