--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="text-indigo-600 hover:text-indigo-900 underline" href="https://github.com/nvm-sh/nvm"
                 target="_blank">nvm</a>:</h2>
         <pre class="px-3 py-3 bg-gray-100 rounded">
-NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.20.0
+NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.20.1
 </pre>
     </header>
     <article>
@@ -59,6 +59,40 @@ NVM_NODEJS_ORG_MIRROR=https://nodejs.raccoon-tw.dev/release nvm install v14.20.0
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                 <!-- ANCHOR -->
+                <!-- v14.20.1 -->
+                <tr class="bg-white">
+                    <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.20.1</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.20.1/node-v14.20.1-darwin-arm64.tar.gz">node-v14.20.1-darwin-arm64.tar.gz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">30.03 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">aa20cca3b9f9850fc6f51aa2febfc483</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        ed4caa5ae6ee4fb53515f10f6321ea39c2a8a707
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900"
+                            href="release/v14.20.1/node-v14.20.1-darwin-arm64.tar.xz">node-v14.20.1-darwin-arm64.tar.xz</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">18.61 MB</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">27b99fcca290b3f92a12c0dc841d5db6</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        c56c1d743ff963ebb64e08fd5462e01f0763c52d
+                    </td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><a
+                            class="text-blue-500 hover:text-blue-900" href="release/v14.20.1/SHASUMS256.txt">SHASUMS256.txt</a>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">200 B</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">87b08fe50fb59ba4e0541658591d434a</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        e88b4869b3ce42f7e472d7a7d13553781b0f2bcc
+                    </td>
+                </tr>
                 <!-- v14.20.0 -->
                 <tr class="bg-white">
                     <td rowspan="3" class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">v14.20.0</td>
